Fixed fb dialog z-index.

--- a/media/css/mocotw/2014review.less
+++ b/media/css/mocotw/2014review.less
@@ -1700,6 +1700,11 @@ body {
     font-size: 16px;
   }
 }
+
+.fb_dialog_advanced {
+  z-index: 20001 !important;
+}
+
 @media only screen and (min-width: 1800px) {
   .main-title {
     top: 160px;
